--- a/package.json
+++ b/package.json
@@ -6,33 +6,34 @@
   "main": "src/index.js",
   "dependencies": {
     "@airgap/beacon-sdk": "2.3.9",
-    "@chakra-ui/core": "0.8.0",
-    "@chakra-ui/icons": "latest",
-    "@chakra-ui/react": "^1.8.3",
-    "@craco/craco": "^6.4.3",
-    "@emotion/core": "latest",
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest",
-    "@taquito/beacon-wallet": "latest",
-    "emotion-theming": "latest",
-    "framer-motion": "^4.1.17",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "@chakra-ui/gatsby-plugin": "^3.0.1",
+    "@chakra-ui/icons": "^2.0.2",
+    "@chakra-ui/react": "^2.2.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@taquito/beacon-wallet": "^12.1.1",
+    "@taquito/taquito": "^12.1.1",
+    "framer-motion": "^6.3.11",
+    "path": "^0.12.7",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-router-dom": "6.2.1",
-    "react-scripts": "4.0.2",
-    "tailwind": "^4.0.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "react-scripts": "^5.0.1",
+    "stream": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "autoprefixer": "^9",
-    "postcss": "^7",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.7.1",
+    "tailwindcss": "^3.1.2",
     "typescript": "3.8.3"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "watch-css": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
   },
